--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,9 @@ logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.database=postgresql
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+java.runtime.version=11
 spring.datasource.initialization-mode=always
 
 # defalt config
