--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 java.runtime.version=11
 spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+
+# env
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
+server.port=${PORT:8080}
 
 # defalt config
 app.api.basepath=/rekkme/api
