--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,11 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
 server.port=${PORT:8080}
+app.api.auth.jwt.secretKey=${JWT_SECRET_KEY}
 
 # defalt config
 app.api.basepath=/rekkme/api
 app.api.cookieName=userid
+app.api.cookieAge=604800
+app.api.avatarUrl=https://github.com/tatiaris/rekkme/raw/master/public/avatars/
+app.api.auth.jwt.expirationTime=36000000
