--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialec
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 server.port=${PORT:8080}
 app.api.auth.jwt.secretKey=${JWT_SECRET_KEY}
 
 # defalt config
 app.api.basepath=/rekkme/api
-app.api.cookieName=userid
+app.api.cookieName=rekkToken
 app.api.cookieAge=604800
 app.api.avatarUrl=https://github.com/tatiaris/rekkme/raw/master/public/avatars/
-app.api.auth.jwt.expirationTime=36000000
+app.api.jwtAge=604800000
