--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,10 @@ spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 server.port=${PORT:8080}
 app.api.auth.jwt.secretKey=${JWT_SECRET_KEY}
 
-# defalt config
+# default config
 app.api.basepath=/rekkme/api
 app.api.cookieName=rekkToken
 app.api.cookieAge=604800
 app.api.avatarUrl=https://github.com/tatiaris/rekkme/raw/master/public/avatars/
 app.api.jwtAge=604800000
+app.api.lowPoints=50
