--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ app.api.cookieAge=604800
 app.api.avatarUrl=https://github.com/tatiaris/rekkme/raw/master/public/avatars/
 app.api.jwtAge=604800000
 app.api.lowPoints=50
+app.api.allowedOrigins=http://localhost:3000,https://rekkme.vercel.app
+app.api.notify.connection.timeout=180000
