--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.767</version>
 		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
